fixed page navigation and loggin tokens

--- a/chat-app-frontend/src/index.css
+++ b/chat-app-frontend/src/index.css
@@ -43,7 +43,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #4f8db6;
+  background-color: #78b64f;
   cursor: pointer;
   transition: border-color 0.25s;
 }
